# PanDelos

./: calculate_k.py  pandelos.sh  setup.sh
benchmark/test-framework/: Cargo.toml
benchmark/test-framework/src/: bench.rs  compute_k.rs  main.rs  manager.rs  reinput.rs  verify.rs
example/: download.sh  run_examples.sh
ig/: .gitignore  compile.sh
ig/infoasys/cli/pangenes/: Cli.java  Kmers.java  PairScores.java  PangeneIData.java  PangeneNELSA.java  PangeneNative.java  PangeneNet.java  Pangenes.java  Scores.java  infoasys_cli_pangenes_PangeneNative.h  infoasys_cli_pangenes_PangeneNative_PairInfo.h
ig/native/: .gitignore  CMakeLists.txt  library.cpp  pangene_native.h
pandelos-native/: .gitignore  CMakeLists.txt  compile.sh
pandelos-native/include/: algorithm.h  pangene_idata.h  stats.h
pandelos-native/src/: algorithm.cpp  main.cpp  pangene_idata.cpp  stats.cpp
